[23318] deleted comments and used formatter